# aiecity

./: .gitignore  README.md  main.py  pyproject.toml
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW05/: HW05.ipynb  pyproject.toml
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW07/: HW07.ipynb
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  best_model.pt  runs.csv
homeworks/HW10-11/: HW10-11.ipynb  report.md
homeworks/HW10-11/artifacts/: best_classifier_config.json  runs.csv
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW12/artifacts/: best_gru.pt  best_gru_config.json  runs.csv
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW13/artifacts/: sample_predictions.csv  tokenization_examples.txt
homeworks/HW14/: HW14.ipynb  report.md
homeworks/HW14/artifacts/: rag_examples.csv  (+2 more)
project/: .gitignore  README.md  report.md  requirements.txt  self-checklist.md
project/artifacts/: class_mapping.json  config.json
project/configs/: README.md  service_config.yaml  train_config.yaml  training_config.json
project/data/: README.md
project/notebooks/: 02_baselines.ipynb  03_model_tuning.ipynb  04_inference.ipynb
project/scripts/: README.md  download_dataset.py
project/splits/: README.md  split_statistics.json  test.csv  train.csv  val.csv
project/src/: README.md  __init__.py  inference.py  service.py  train.py  utils.py
project/tests/: test_model.py  test_optimizer.py
(+14 files in other folders)
