[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "s03"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.127.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "typer>=0.20.0",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
eda-cli = "eda_cli.cli:app"
